<resources>
    <string name="app_name">01</string>
    <string name="witaj_w">Witaj w</string>
    <string name="_01">01</string>
    <string name="system_arabski">system arabski</string>
    <string name="system_rzymski">system rzysmki</string>
    <string name="system_binarny">system binarny</string>
    <string name="spr">spr</string>
    <string name="powrot_bin">powrót</string>
    <string name="pow_rzy_reg1">powrót</string>
    <string name="pow_ara_reg1">powrót</string>
    <string name="da_ar_reg1">dalej</string>
    <string name="po_run1_menu">Powrót do menu</string>
    <string name="zadanie_1">"Zadanie : "</string>
    <string name="tresc1">Ustaw liczby w sposób rosnący...</string>
    <string name="tresc_1">tresc_1</string>
    <string name="powr_t">Powrót</string>
    <string name="text">Text</string>
    <string name="system_hexalny">system hexalny</string>
</resources>
