<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reg">

    <Button
        android:id="@+id/powrot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/frenchpressfreefont"
        android:text="@string/pow_ara_reg1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dalej"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dalej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/frenchpressfreefont"
        android:text="@string/da_ar_reg1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/powrot" />

    <TextView
        android:id="@+id/Zadanie1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/frenchpressfreefont"
        android:text="@string/zadanie_1"
        android:textAlignment="center"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Zadanie" />

    <TextView
        android:id="@+id/tresc1"
        android:layout_width="384dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/frenchpressfreefont"
        android:text="@string/tresc1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="50sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/dalej"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Zadanie1" />

</android.support.constraint.ConstraintLayout>